@startuml
entity "User" {
  *id : number <<generated>>
  --
  *email : text
  *password_hash : text
  *role : text
  created_at : timestamp
}

entity "Passenger" {
  *id : number <<generated>>
  --
  *user_id : number <<FK>>
  *first_name : text
  *last_name : text
  passport_data : text
}

entity "Order" {
  *id : number <<generated>>
  --
  *user_id : number <<FK>>
  *created_at : timestamp
  *status : text
  total_amount : decimal
}

entity "Ticket" {
  *id : number <<generated>>
  --
  *order_id : number <<FK>>
  *seat_id : number <<FK>>
  *passenger_id : number <<FK>>
  price : decimal
  ticket_number : text
}

entity "Train" {
  *id : number <<generated>>
  --
  *number : text
  type : text
}

entity "Carriage" {
  *id : number <<generated>>
  --
  *train_id : number <<FK>>
  *number : integer
  type : text
}

entity "Seat" {
  *id : number <<generated>>
  --
  *carriage_id : number <<FK>>
  number : integer
}

entity "Route" {
  *id : number <<generated>>
  --
  *name : text
}

entity "RouteStation" {
  *route_id : number <<FK>>
  *station_id : number <<FK>>
  --
  arrival_time : time
  departure_time : time
  stop_order : integer
}

entity "Station" {
  *id : number <<generated>>
  --
  *name : text
  city : text
}

User ||--o{ Order
User ||--o{ Passenger
Order ||--|{ Ticket
Passenger ||--o{ Ticket
Ticket }o--|| Seat
Seat }o--|| Carriage
Carriage }o--|| Train
Train }o--|| Route
Route ||--|{ RouteStation
Station ||--o{ RouteStation
@enduml

